Implemented Connection Pooling using Apache Commons DBCP2